--- a/blue-replication-controller.yaml
+++ b/blue-replication-controller.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: blue
-        image: blue
+        image: sidiali/capstone_repo:capstone_app
         ports:
         - containerPort: 80
