--- a/green-replication-controller.yaml
+++ b/green-replication-controller.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: green
-        image: green
+        image: sidiali/capstone_repo
         ports:
         - containerPort: 80
